--- a/Sandbox/Sandbox.vcxproj.filters
+++ b/Sandbox/Sandbox.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Src\Application.cpp">
+    <ClCompile Include="Src\Sandbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
