Fixed Congigration issues and Added Proper Premake setup

--- a/Eisen/Eisen.vcxproj.filters
+++ b/Eisen/Eisen.vcxproj.filters
@@ -1,42 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Eisen">
+      <UniqueIdentifier>{59251B0D-C539-43BE-8EBB-E61DFA8E3FEF}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\Eisen\Core.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Eisen.h" />
+    <ClInclude Include="src\Eisen\Application.h">
+      <Filter>Eisen</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Eisen\Application.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Eisen\Core.h">
+      <Filter>Eisen</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Eisen.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Eisen\EntryPoint.h">
+      <Filter>Eisen</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Eisen\EntryPoint.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\Eisen\Log.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Eisen\Log.h">
+      <Filter>Eisen</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Src\Eisen\Application.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\Eisen\Application.cpp">
+      <Filter>Eisen</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Eisen\Log.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\Eisen\Log.cpp">
+      <Filter>Eisen</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
