--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Eisen/Vendor/spdlog"]
-	path = Eisen/Vendor/spdlog
+[submodule "Hazel/vendor/spdlog"]
+	path = Hazel/vendor/spdlog
 	url = https://github.com/gabime/spdlog
