--- a/Eisen/Eisen.vcxproj
+++ b/Eisen/Eisen.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EZ_PLATFORM_WINDOWS;EZ_BUILD_DLL;EZ_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories); $(SolutionDir)Eisen\src; </AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -101,7 +101,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EZ_PLATFORM_WINDOWS;EZ_BUILD_DLL;EZ_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories); $(SolutionDir)Eisen\src; </AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -127,7 +127,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EZ_PLATFORM_WINDOWS;EZ_BUILD_DLL;EZ_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories); $(SolutionDir)Eisen\src; </AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -153,6 +153,10 @@
     <ClInclude Include="src\Eisen\Application.h" />
     <ClInclude Include="src\Eisen\Core.h" />
     <ClInclude Include="src\Eisen\EntryPoint.h" />
+    <ClInclude Include="src\Eisen\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Eisen\Events\Event.h" />
+    <ClInclude Include="src\Eisen\Events\KeyEvent.h" />
+    <ClInclude Include="src\Eisen\Events\MouseEvent.h" />
     <ClInclude Include="src\Eisen\Log.h" />
   </ItemGroup>
   <ItemGroup>
